<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/online_translator"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_choose_from_lang_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/please_choose_language"
        android:layout_margin="16dp"
        android:textAlignment="center"/>

    <Spinner
        android:id="@+id/spinner_from_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_from_lang_word"
        android:layout_margin="16dp"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/tv_choose_to_lang_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner_from_lang"
        android:text="@string/please_choose_language_to_translate"
        android:layout_margin="16dp"
        android:textAlignment="center"/>

    <Spinner
        android:id="@+id/spinner_to_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_to_lang_word"
        android:layout_margin="16dp"
        android:spinnerMode="dropdown"/>

    <EditText
        android:id="@+id/et_input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner_to_lang"
        android:layout_margin="16dp"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/write_your_text_here"/>

    <Button
        android:id="@+id/translate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_input_text"
        android:layout_margin="16dp"
        android:text="@string/translate"/>

    <TextView
        android:id="@+id/tv_translation_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/translate_button"
        android:layout_margin="16dp"
        android:text="@string/translation"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_translation_word"
        android:layout_margin="16dp"
        android:textSize="16sp"
        tools:text="here will be the result"/>

</androidx.constraintlayout.widget.ConstraintLayout>